# tg-bot-for-bank

./: Dockerfile  docker-compose.yml  pyproject.toml
bot/: bot.py
bot/db/: database_handler.py  models.py
bot/filters/: role_filter.py  user_exists_filter.py
bot/handlers/: auth_user.py  common.py  sup_admin.py
bot/keyboards/: kb_wrap.py  simple_row.py
bot/qr/: generator.py
bot/services/: message_deleter.py  sender.py
tg_bot_for_bank/: bot.py  config_reader.py  models.py  role_middleware.py  sender.py
tg_bot_for_bank/db/: database_handler.py  models.py
tg_bot_for_bank/filters/: NameFilter.py  chat_action_middleware.py  role_filter.py  user_exists_filter.py
tg_bot_for_bank/handlers/: admin.py  auth_user.py  common.py  employee.py  sup_admin.py
tg_bot_for_bank/keyboards/: simple_row.py
tg_bot_for_bank/qr/: conversion.py  generator.py
tg_bot_for_bank/services/: base_search_handlers.py  information_handlers.py  message_deleter.py  search_parser.py  sender.py
