[tool.poetry]
name = "tg-bot-for-bank"
version = "0.1.0"
description = ""
authors = ["Maks-Diablo <v16111980@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiogram = "^3.7.0"
peewee = "^3.17.5"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
